2010-03-06 Dominik Reichardt <dominus@users.sourceforge.net>
	* makefile.am: tuned the app bundle a bit, including some of the standard files
	* Info.plist.in: updated copyrights date

2010-03-06	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* shapes/font.cc: '^' character in conversations/plaques/books/etc. will
	  convert the next character to uppercase. This is needed in the training
	  dialog of Sentri, for example.

2010-03-05	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* MacOS X: App bundles now use CoreFoundation API to detect resource path
	  instead of it being hard-coded into the application.
	* Fixed bugs:
	  #2962438 The BG and SI credits use the wrong palette
	  #2961649 Party flickers when walking and infravision or invisible

2010-03-04 Ryan Nunn <colourles@users.sourceforge.net>
	* msvcstuff/msvc_kludges.h: Updating to reflect current code
	* version.cc: Added Windows Vista and Windows 7 to the list of detected windows versions

2010-03-03 Dominik Reichardt <dominus@users.sourceforge.net>
	* exult.cc: look for data folder in .app bundle as well on Mac OS X (and changed the copyright date)
	
2010-02-25	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* Fixed bugs:
	  #2958487 HQx3 is only scaled to 2x when set in Exult menu
	  #2813106 ES won'tt save frame powers when they don't previously exist
	* ES: Eliminated a few warnings, including Gtk+ stderr runtime warnings.
	  Added missing handlers and missing export. Fixed a few minimum values of
	  spin buttons.

2010-02-24	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* Fixed bugs:
	  #2179006 Sleeping on the Floor (BG/SI)
	  #2798862 Unconcious enemies stand up for a second before dieing
	  #2796857 SI(?): Sleeping in beds not working correctly
	* General: Eliminated a few warnings.

2010-02-23	Marzo Sette Torres Junior <marzojr@yahoo.com>
	* Fixed bugs:
	  #2912644 Black rain
		Rain drops/snow flakes/magic sparkle now use shape 0 from sprites.vga.